# tcpc

./: Cargo.toml
tcp_client/: Cargo.toml
tcp_client/src/: errors.rs  main.rs  menu.rs
tcp_server/: Cargo.toml
tcp_server/src/: errors.rs  handlers.rs  main.rs  menu.rs
