[package]
name = "tcp_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.56"
connector = { version = "0.1.0", path = "../connector" }
tokio = { version = "1.36.0", features = ["io-util", "net", "rt-multi-thread", "macros"] }
